src/test/ui/generator/yield-in-const.stderr
error[E0601]: main function not found

error[E0627]: yield statement outside of generator literal
  --> $DIR/yield-in-const.rs:13:17
   |
13 | const A: u8 = { yield 3u8; 3u8};
   |                 ^^^^^^^^^

error: aborting due to 2 previous errors

